@@ -13,6 +13,7 @@ Version 7.0.1
     OutOfBoundException anymore, when end of AssocArray is reached
   - Increased test coverage for AssocArray
   - Added compare operator to Variant
+  - Added more operators for AssocArray
 
 Version 7.0.0 vom 29.07.2018 (Repo-Tag: REL_7_0_0)
   - Complete Rewrite, based on Version 6.4.7
